<resources>
    <string name="app_name">Reminder</string>

    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="notes">Notes</string>

    <string name="reminder_field">Reminder</string>
    <string name="reminder_dialog_title">New Reminder</string>
    <string name="add_fabcontent">Add</string>
    <string name="app_theme">App theme</string>
    <string name="language_setting">Select language</string>
    <string name="cancel_txt">Cancel</string>

    <string name="system_default">System (Default)</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>

    <string name="snackbar_reminder_scheduled">Reminder has been scheduled</string>
    <string name="snackbar_reminder_edited">Reminder has been edited</string>

    <string name="delete_reminder_dialog_title">Delete Reminder?</string>
    <string name="question_txt_delete">Are you sure you want to delete this reminder?</string>
    <string name="delete_button">Delete</string>

    <string name="done_txt">Done</string>
    <string name="not_done_txt">Incomplete</string>

    <string name="reminder_details_dialog">Reminder Details</string>
    <string name="reminder_details_date">Date</string>
    <string name="reminder_details_time">Time</string>
    <string name="reminder_status_dialog">Status</string>

    <string name="theme_dialog">Select Theme</string>

    <string name="edit_error">Unable to edit this reminder, try again later</string>

    <string name="txt_daily">Daily</string>
    <string name="txt_weekly">Weekly</string>
    <string name="txt_monthly">Monthly</string>
    <string name="txt_yearly">Yearly</string>
    <string name="txt_onetime">Just once</string>
    <string name="reminder_type">Reminder type</string>

    <string name="already_exists">A reminder with this name already exists!</string>
    <string name="required_field_error">This field is required!</string>

    <string name="confirm_txt">Confirm</string>


    <string name="appwidget_text">Loading…</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Closest Reminder</string>

    <string name="no_upcoming_reminders">No upcoming reminders</string>
    <string name="closest_reminder">Reminder</string>


    <string name="related_apps">Related Apps</string>

    <string name="google_calendar">Google Calendar</string>

    <string name="searchbar_hint">Search</string>

    <string name="common_error">This action isn\'t available</string>

    <string name="amoled_theme">Pure black theme</string>

    <string name="edit_button_tooltip">Edit</string>
    <string name="txt_3months">Quarterly</string>

    <string name="categorization_all">All</string>
    <string name="categorization_daily">Daily</string>
    <string name="categorization_weekly">Weekly</string>
    <string name="categorization_monthly">Monthly</string>
    <string name="categorization_3months">Quarterly</string>
    <string name="categorization_yearly">Yearly</string>
    <string name="categorization_onetime">One-Time</string>

    <string name="settings_bk_restore">Backup &amp; Restore (reminders only)</string>

    <string name="export_btn">Export</string>
    <string name="import_btn">Import</string>

    <string name="export_success">Export successful</string>
    <string name="import_success">Import successful</string>

    <string name="notes_txt_hint">Type something here…</string>
    <string name="save">Save</string>
    <string name="save_success">Notes saved successfully</string>

    <string name="clean">Clean</string>
    <string name="nothing_to_delete">No reminders to delete</string>
    <string name="clean_reminders">Remove completed?</string>
    <string name="description_cleanup">This will permanently delete all one-time reminders marked as done. This action cannot be undone.</string>
    <string name="cleanup_success">Reminders have been cleaned</string>

</resources>