<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="36dp">


    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_dialog_title"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:fontFamily="@font/moderustic"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="8dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_field"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="?attr/colorSurfaceContainerHighest" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reminder_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/onetime_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_onetime" />

        <RadioButton
            android:id="@+id/daily_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_daily" />

        <RadioButton
            android:id="@+id/weekly_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_weekly" />

        <RadioButton
            android:id="@+id/monthly_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_monthly" />

        <RadioButton
            android:id="@+id/months3_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_3months" />


        <RadioButton
            android:id="@+id/yearly_radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_yearly" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="96dp">

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="128dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:icon="@drawable/ic_close"
            android:padding="14dp"
            app:iconGravity="textEnd"
            android:text="@string/cancel_txt" />

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="128dp"
            android:padding="14dp"
            style="@style/Widget.Material3.Button"
            android:text="@string/confirm_txt"
            app:icon="@drawable/ic_check"
            app:iconGravity="textEnd"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="14dp" />



    </LinearLayout>
</LinearLayout>
