<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/themeOptionsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/themeSystemDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_default" />

        <RadioButton
            android:id="@+id/themeDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark" />

        <RadioButton
            android:id="@+id/themeLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />
    </RadioGroup>
</LinearLayout>
