<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/homefragment_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fitsSystemWindows="true">



        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true"
            app:liftOnScrollTargetViewId="@id/recycler_view">

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Reminder.Text.AppBar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/homefragment_menu"
                app:title="@string/title_home" />


            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/searchbar_hint" />

            <HorizontalScrollView
                android:id="@+id/categories_scView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/categories_chipgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:singleLine="true"
                app:selectionRequired="true" >

                <com.google.android.material.chip.Chip
                    android:id="@+id/categorization_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/categorization_all"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/categorization_onetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/categorization_onetime"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/categorization_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/categorization_daily"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/categorization_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/categorization_weekly"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/categorization_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/categorization_monthly"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/categorization_3months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/categorization_3months"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/categorization_yearly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/categorization_yearly"/>


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>



        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/searchbar_hint"
            app:layout_anchor="@id/search_bar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <!-- Search results go here (ScrollView, RecyclerView, etc...) -->

        </com.google.android.material.search.SearchView>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="208dp"
        android:scrollbars="vertical"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.loadingindicator.LoadingIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            app:indeterminateAnimationTypeCircular="retreat"
            android:layout_centerInParent="true"
            android:layout_gravity="center"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_reminder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/add_fabcontent"
        android:tooltipText="@string/add_fabcontent"
        android:src="@drawable/ic_add"
        app:fabCustomSize="64dp"
        app:layout_anchor="@id/recycler_view"
        app:layout_anchorGravity="end|bottom" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
