<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/reminder_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:cardBackgroundColor="?attr/colorForItemBG"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/reminder_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish"
                    android:text="reminder"
                    android:textSize="24sp"
                    android:textAppearance="?attr/textAppearanceHeadlineMedium" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/reminder_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="time"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

                <TextView
                    android:id="@+id/reminder_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="date"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/done_indicator"
                    style="?attr/materialIconButtonFilledTonalStyle"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_txt"
                    android:singleLine="true"
                    android:scaleX="0.70"
                    android:scaleY="0.70"
                    app:icon="@drawable/ic_check"
                    app:iconGravity="end"
                    app:cornerRadius="8dp" />

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        app:icon="@drawable/ic_delete"
        app:iconGravity="textTop"
        android:tooltipText="@string/delete_button"
        app:layout_constraintTop_toTopOf="@id/reminder_card"
        app:layout_constraintBottom_toBottomOf="@id/reminder_card"
        app:layout_constraintEnd_toEndOf="@id/reminder_card" />

    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/edit_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/ic_edit"
        app:iconGravity="textTop"
        android:tooltipText="@string/edit_button_tooltip"
        app:layout_constraintTop_toTopOf="@id/reminder_card"
        app:layout_constraintBottom_toBottomOf="@id/reminder_card"
        app:layout_constraintEnd_toStartOf="@id/delete_button" />




</androidx.constraintlayout.widget.ConstraintLayout>
